feat: Implements Create Method from CRUD

--- a/template/index.html
+++ b/template/index.html
@@ -42,7 +42,9 @@
                 </table>
             </div>
         </section>
-
+        <div class="card-footer">
+            <a href="/add" class="btn btn-primary">Adicionar Produto</a>
+        </div>
     </div>
 </body>
 
