--- a/template/index.html
+++ b/template/index.html
@@ -22,7 +22,7 @@
                             <td>{{.Description}}</td>
                             <td>{{printf "R$ %.2f" .Price}}</td>
                             <td>{{.Quantity}}</td>
-                            <td><a href="#" class="btn btn-primary">Editar</a></td>
+                            <td><a href="/edit?id={{.Id}}" class="btn btn-info">Editar</a></td>
                             <td><button class="btn btn-danger" onclick="onDel('{{.Id}}')">Deletar</button></td>
                         </tr>
                         {{end}}
