--- a/template/edit.html
+++ b/template/edit.html
@@ -10,6 +10,7 @@
             </div>
         </div>
         <form method="POST" action="update">
+            <input type="hidden" name="id" value="{{.Id}}">
             <div class="row">
                 <div class="col-sm-8">
                     <div class="form-group">
