--- a/template/_menu.html
+++ b/template/_menu.html
@@ -1,5 +1,5 @@
 {{define "_menu"}}
 <nav class="navbar navbar-light bg-light mb-4">
-    <a class="navbar-brand" href="/">CRUD Loja</a>
+    <a class="navbar-brand" href="/">CRUD STORE</a>
 </nav>
 {{end}}
